bat/install/iptables
# Manual customization of this file is not recommended.
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

##################################################################

-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT


##################################################################

#-A INPUT -m state --state NEW -m tcp -p tcp --dport 1122 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp -s 195.88.29.246 -d 0/0 --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp -s 77.87.72.0/28 -d 0/0 --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp -s  94.23.59.221 -d 0/0 --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp -s 91.121.65.223 -d 0/0 --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp -s  79.187.5.190 -d 0/0 --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp -s  87.205.6.232 -d 0/0 --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp -s  79.187.5.189 -d 0/0 --dport 22 -j ACCEPT
-A INPOT -m state --state NEW -m tcp -p tcp -s 192.168.10.0/16 -d 0/0 --dport 22 -j ACCEPT


##################################################################

-A INPUT -p tcp --dport   80 -j ACCEPT
-A INPUT -p tcp --dport  443 -j ACCEPT
-A INPUT -p tcp --dport  465 -j ACCEPT
-A INPUT -p tcp --dport  587 -j ACCEPT
-A INPUT -p tcp --dport 7001:7002 -j ACCEPT
-A INPUT -p tcp --dport 7500 -j ACCEPT
-A INPUT -p tcp --dport 8001:9001 -j ACCEPT
-A INPUT -p tcp --dport 3690 -j ACCEPT


##################################################################

-A INPUT -j REJECT --reject-with icmp-host-prohibited


##################################################################

-A FORWARD -j REJECT --reject-with icmp-host-prohibited


##################################################################

-A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT

-A OUTPUT -p tcp --dport   22 -j ACCEPT
-A OUTPUT -p tcp --dport   25 -j ACCEPT
-A OUTPUT -p udp --dport   53 -j ACCEPT
-A OUTPUT -p tcp --dport   80 -j ACCEPT
-A OUTPUT -p udp --dport  123 -j ACCEPT
-A OUTPUT -p tcp --dport  443 -j ACCEPT
-A OUTPUT -p udp --dport  465 -j ACCEPT
-A OUTPUT -p udp --dport  587 -j ACCEPT
-A OUTPUT -p tcp --dport 1122 -j ACCEPT
-A OUTPUT -p tcp --dport 7001:7002 -j ACCEPT
-A OUTPUT -p tcp --dport 8001:9001 -j ACCEPT
-A OUTPUT -p tcp --dport 3690 -j ACCEPT


COMMIT


*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

-A PREROUTING -d 94.23.51.163 -p tcp -m tcp --dport 443 -j DNAT --to-destination 94.23.51.163:6002
#-A OUTPUT     -d 94.23.51.163 -p tcp -m tcp --dport 443 -j DNAT --to-destination 94.23.51.163:6002

-A PREROUTING -d 94.23.51.163 -p tcp -m tcp --dport 80 -j DNAT --to-destination 94.23.51.163:6002
#-A OUTPUT     -d 94.23.51.163 -p tcp -m tcp --dport 80 -j DNAT --to-destination 94.23.51.163:6002


COMMIT
